<resources>
    <string name="app_name">PairUp</string>
    <string name="menu_right">Right menu</string>
    <string name="title_settings">Settings</string>
    <string name="title_push_notifications">Show Notifications</string>
    <string name="title_sync">Data Sync</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="title_welcome">Welcome</string>
    <string name="edit_profile_first_name">First name</string>
    <string name="edit_profile_last_name">Last name</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_phone">Phone</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="trial_sign_up">Sign up now</string>
    <string name="pushes_send_me_push_notifications_for">Send me push notifications for:</string>
    <string name="pushes_activity_on_any_kind">Activity on any kind</string>
    <string name="pushes_only_key_words">Only key words</string>
    <string name="pushes_nothing_push_notifications_off">Nothing (push notifications off)</string>
    <string name="pushes_keywords_hint">Healthy sessions, walking, cycling</string>
    <string name="pushes_key_words">Key words</string>
    <string name="pushes_case_warning">Seperate words and phrases with commas.\nKey words are not case sensitive</string>
    <string name="login_not_listed">Not listed</string>
    <string name="next">Next</string>
    <string name="chat_drawer_profile">Profile</string>
    <string name="chat_drawer_push_notifications">Push notifications</string>
    <string name="chat_drawer_settings">Settings</string>
    <string name="chat_drawer_about_us">About us</string>
    <string name="title_about_us">About us</string>
    <string name="verify_you_will_get_code">You will get code provided by your provider</string>
    <string name="sync_google_fit">Google Fit</string>
    <string name="sync_fitbit">Fitbit</string>
    <string name="settings_logout">Log Out</string>
    <string name="settings_sync">Data Sync</string>
    <string name="profile_phone">Phone number</string>
    <string name="profile_email">Email</string>
    <string name="edit_profile_change_photo">Change photo</string>
    <string name="about_us_text">Some text about the App… Messenger bag pop-up bicycle rights, brunch cliche freegan vice mixtape wayfares gentrify kickstarger.\n\nCountact us and Social Media</string>
    <string name="welcome_hint_phone">Phone</string>
    <string name="error_network">Check your network connection</string>
    <string name="loading">Loading</string>
    <string name="loading_sending_code">Sending verification code to the server</string>
    <string name="loading_user_info">Sending user info to the server</string>
    <string name="registration_hint_code">Code</string>
    <string name="register_choose_your_plan">Choose your plan</string>
    <string name="registration_error_fill_first_name">Enter first name</string>
    <string name="registration_error_fill_last_name">Enter last name</string>
    <string name="registration_choose_subscriptions_btn">Choose your subscription</string>
    <string name="error_empty_email">Enter email</string>
    <string name="error_incorrect_email">Enter valid email</string>
    <string name="registration_error_fill_code">Enter verification code</string>
    <string name="registration_error_fill_phone">Enter phone number</string>
    <string name="registration_error_fill_area_code">Invalid area code format</string>
    <string name="registration_loading">Creating account…</string>
    <string name="verify">Verify</string>
    <string name="enter_phone_description">Welcome! Please enter your mobile\nphone number for SMS verification</string>
    <string name="submit">Submit</string>
    <string name="title_verification">Verification</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_code_description">For sms code verification</string>
    <string name="title_payment">Payment</string>
    <string name="warning_you_will_lose_all_data">Are you sure that you like to logout of the app? You will require to resend an SMS verification to login to the app again.</string>
    <string name="welcome_to_pairup">Welcome to Pair Up!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="trial_dialog_no_worries">No worries. Pair Up is open to everyone!</string>
    <string name="start_free_14_day_trial_now">Start a free 14 day trial now</string>
    <string name="trial_dialog_learn_more">Learn more</string>
    <string name="select_provider_label">Please select your provider:</string>
    <string name="welcome_question">Did you receive a personal\nsign-up invitation?</string>
    <string name="confirm">Confirm</string>
    <string name="title_start_trial">Start your free trial</string>
    <string name="trial_start_trial">Start a free 14 day trial now</string>
    <string name="verify_resend">Re-send</string>
    <string name="loading_sending_request_for_code">Requesting verification code</string>
    <string name="verify_waiting_for_sms">Success! Please wait for your SMS confirmation to complete the verification process.</string>
    <string name="edit_profile_profile_updated">Profile has been updated</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile_name_surname_pattern">%1$s %2$s</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="google_fit_token_retrieved">Google fit has been integrated</string>
    <string name="google_fit_fail_to_retrieve_token">Integration has been failed. Try again</string>
    <string name="integration_google_fit">Integrate Google Fit</string>
    <string name="error">Error</string>
    <string name="error_uploading_photo">While photo uploading</string>
    <string name="error_uploading_providers">Providers not loaded. Try again?</string>
    <string name="retry">Retry</string>
    <string name="edit_profile_error_access_storage">Application needs storage access to pick photo</string>
    <string name="integration_fitbit">Integrate with fitbit</string>
    <string name="sending_fitbit_code">Sending fitbit code to the server</string>
    <string name="fitbit_integration_successful">Fitbit has been integrated</string>
    <string name="skip">Skip</string>
    <string name="title_tour_1_page">Step 1 of 2</string>
    <string name="title_tour_2_page">Step 2 of 2</string>
    <string name="finish">Finish</string>
    <string name="tour_profile_title">Let get started!</string>
    <string name="tour_profile_description">Few things to get started and we will\nguide you through it</string>
    <string name="tour_profile_description_2">Let start by confirming/setting your\nprofile information. Click Next when\nyou have completed it</string>
    <string name="tour_upload_avatar_title">Upload your\nprofile photo</string>
    <string name="tour_upload_avatar_description">Choose a photo for profile photo.</string>
    <string name="tour_fitness_app_title">Track your steps with\nfitbit/google fit</string>
    <string name="tour_fitness_app_description">We are nearly there… to understand\nyour active level better, please\nensure to sync your device with\nour app</string>
    <string name="tour_socials_title">Looks like you are\nall set!</string>
    <string name="tour_socials_description">One of our coach will contact you\nshortly. Meanwhile, you can follow us\non Facebook for more tips to\nget active</string>
    <string name="tour_socials_fb_link">facebook.com/pearupapp</string>
    <string name="tour_socials_description_2">Or you can share this app with your\nfamily and friends to enjoy the FREE 14 days trial.</string>
    <string name="welcome_hint_area_code">Area code</string>
    <string name="verify_code_format_hint">0000</string>
    <string name="share">Share</string>
    <string name="share_using">Share with…</string>
    <string name="error_incorrect_phone">Invalid phone format</string>
    <string name="progress_verifying_phone_number">Verifying phone number</string>
    <string name="Smooch_startOfConversation">\nWelcome to the Pair Up main page. This is where you will connect with your Pair Up coach.\n\nTap the upper right menu to edit settings and learn more about Pair Up. Explore the About Us section to find our Privacy Policy and Licensing Agreement.</string>
    <string name="Smooch_welcome"/>
    <string name="Smooch_messageHint">Input chat message</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="settings_notifications">Show Notifications</string>
    <string name="error_phone_taken">Phone number already taken</string>
    <string name="error_phone_not_registered">Phone number is not registered yet</string>
    <string name="title_area_code">Area code</string>
    <string name="error_incorrect_verification_code">Incorrect verification code</string>
    <string name="try_again">Try again</string>
    <string name="loading_creating_account">Creating account</string>
    <string name="error_no_accosiated_number">No accosiated number with this code. Please retry login.</string>
    <string name="warning_you_already_logged_in">You are already logged in</string>
    <string name="ok">OK</string>
    <string name="warning_permission_needed">Permission required</string>
    <string name="sms_permission_description">After you enter the phone number you will receive sms. If you grant to the app permission to read incoming sms then it could be automaticaly handled. If not you have to open sms and click on link or type code manually.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="error_image_unacceptable">Unacceptable image</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription_status">Subscription status</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription_request">Please, subscribe to continue using PairUp</string>
    <string name="chat_screen_blocked">Chat is blocked!</string>
    <string name="screen_splash_main_txt">your healthy habit coach\n with you every step of the way</string>
    <string name="screen_welcome_user_have_account">Login if you already have a Pair Up account</string>
    <string name="screen_enter_phone_error_registered">Unsuccessful!</string>
    <string name="screen_enter_phone_error_not_registered">Verification is unsuccessful. You are not registered with Pair Up. Please sign up first.</string>
    <string name="screen_enter_phone_error_has_no_provider">Verification is unsuccessful. You don\'t have a provider Please try again or contact us at support@pairup.im</string>
    <string name="screen_enter_phone_error_has_another_provider">Verification is unsuccessful. You selected wrong provider. Please try again or contact us at support@pairup.im</string>
    <string name="screen_enter_phone_error">Something went wrong. Please, try again.</string>
    <string name="subscription_owned_text">Congratulations! You are now subscribed for Pair Up for 1 month.</string>
    <string name="subscription_status_time">"Subscription was paid in "</string>
    <string name="subscribed_status">You are already subscribed</string>
    <string name="provider_not_chosen">Please select your provider:</string>
    <string name="notification_status_enabled">Notifications are enabled!</string>
    <string name="subscription_dialog_title">Choose your auto-renewable subscription plan</string>
    <string name="subscription_dialog_trial">2 weeks trial period available for all plans.</string>
    <string name="subscription_habit_starter">Habit Starter (3 months) - $149.99.</string>
    <string name="subscription_habit_stabilizer">Habit Stabilizer (6 months) - $179.99.</string>
    <string name="subscription_habit_master">Habit Master (12 months) - $299.99.</string>
</resources>