<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfbfb"
    android:dividerPadding="8dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_profile_first_name"
        android:maxLines="1"
        android:inputType="textCapWords"
        />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_profile_last_name"
        android:inputType="textCapWords"
        android:maxLines="1"
        />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_profile_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/profile_phone"
        android:inputType="phone"
        android:maxLines="1"
        />

    <Button
        android:id="@+id/choose_your_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/app_btn_filled"
        android:text="@string/register_choose_your_plan"
        android:textColor="@android:color/white"
        />

</LinearLayout>