<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="32dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/subscription_dialog_title"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/subscription_dialog_trial"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@color/separator"
        />

    <TextView
        android:id="@+id/starter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/subscription_habit_starter"
        android:textColor="@color/app_accent"
        android:textSize="18sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separator"
        />

    <TextView
        android:id="@+id/stabilizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/subscription_habit_stabilizer"
        android:textColor="@color/app_accent"
        android:textSize="18sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/separator"
        />

    <TextView
        android:id="@+id/master"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/subscription_habit_master"
        android:textColor="@color/app_accent"
        android:textSize="18sp"
        />

</LinearLayout>