<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar" />

    <TextView
        style="@style/tour_caption_style"
        android:layout_marginTop="16dp"
        android:text="@string/tour_socials_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/tour_socials_description"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/fitbit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:src="@drawable/ic_fitbit"
            />

        <ImageView
            android:id="@+id/google_fit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:src="@drawable/ic_google_fit"
            />

    </FrameLayout>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/app_btn_border"
        android:text="@string/skip"
        />

</LinearLayout>