<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/avatar_placeholder"
            />

        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/settings_edit_profile"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/sync"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/settings_sync"
        />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/settings_logout"
        />

    <LinearLayout
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/show_notifications"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/notifications_switch_compat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />


    </LinearLayout>


</LinearLayout>