<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/initial_screen_gradient"
    android:keepScreenOn="true"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <include layout="@layout/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/enter_phone_description"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg_with_border"
            android:orientation="horizontal"
            android:padding="1dp"
            >

            <EditText
                android:id="@+id/area_code"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:hint="@string/welcome_hint_area_code"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:background="@android:color/white"
                />

            <ImageView
                android:id="@+id/area_code_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_arrow_right"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg_with_border"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:hint="@string/welcome_hint_phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/app_btn_filled"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</LinearLayout>