<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_toolbar" />

    <TextView
        style="@style/tour_caption_style"
        android:layout_marginTop="16dp"
        android:text="@string/tour_upload_avatar_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16sp"
        android:text="@string/tour_upload_avatar_description"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/pick_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/pick_photo_circle"
            android:padding="48dp"
            android:src="@drawable/ic_camera"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

    </FrameLayout>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/app_btn_border"
        android:text="@string/skip"
        />

</LinearLayout>